--- a/css.css
+++ b/css.css
@@ -316,6 +316,7 @@ body > main .selfIntroduction{
 }
 
 section.skills,
+section.message,
 section.portfolio{
     max-width: 940px;
     margin-left: auto;
@@ -324,6 +325,7 @@ section.portfolio{
     border-radius: 2px;
 }
 section.skills > h2,
+section.message > h2,
 section.portfolio > h2{
     text-align: center;
     font-size: 34px;
@@ -376,9 +378,7 @@ section.skills.offset .progress{
     transform: translateX(-100%);
 }
 
-section.portfolio{
-    text-align: center;
-}
+
 section.portfolio >nav{
     text-align: center;
     display: inline-block;
@@ -424,6 +424,8 @@ section.portfolio >nav .bar.state-3 .bar-inner{
     margin-left: 140px;
 }
 section.portfolio{
+    text-align: center;
+    margin-bottom: 100px;
     max-width: 730px;
 }
 section.portfolio .swiper-container {
@@ -452,6 +454,15 @@ section.portfolio .swiper-button-next{
     transform: translateY(180px);
 }
 
+section.message > ol{
+    max-width: 700px;
+    margin: 0 auto;
+    border-top: 1px solid #DDD;
+}
+section.message > ol > li{
+    padding: 16px;
+    border-bottom: 1px solid #DDD;
+}
 
 
 
